--- a/standorte.html
+++ b/standorte.html
@@ -1,218 +1,212 @@
 <!DOCTYPE html>
 <html class="rest">
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!-- Page title -->
-    <title>Standorte | PAYUCA GmbH</title>
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
-
-    <!-- Vendor styles -->
-    <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="vendor/metisMenu/dist/metisMenu.css" />
-    <link rel="stylesheet" href="vendor/animate.css/animate.css" />
-    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
-
-    <!-- App styles -->
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="styles/style.css">
-
-</head>
-<body class="fixed-navbar sidebar-scroll landing-page fixed-footer rest">
-
-<!-- Header -->
-<div id="header">
-    <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
-      <div class="col-lg-12" style="padding-right: 25px;">
-          <div class="navbar-header">
-              <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <!-- Page title -->
+      <title>Standorte | PAYUCA GmbH</title>
+      <!-- Favicon -->
+      <link rel="shortcut icon" type="image/png" href="favicon.png" />
+      <!-- Vendor styles -->
+      <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css" />
+      <link rel="stylesheet" href="vendor/metisMenu/dist/metisMenu.css" />
+      <link rel="stylesheet" href="vendor/animate.css/animate.css" />
+      <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
+      <!-- App styles -->
+      <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+      <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
+      <link rel="stylesheet" href="styles/style.css">
+   </head>
+   <body class="fixed-navbar sidebar-scroll landing-page fixed-footer rest">
+      <!-- Header -->
+      <div id="header">
+         <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
+            <div class="col-lg-12" style="padding-right: 25px;">
+               <div class="navbar-header">
+                  <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
-              </button>
-              <a href="index.html"><img src="images/landing/payucaLogo.png" class="logo" alt="PAYUCA Logo" /></a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
-                  <li><a class="page-scroll" href="index.html">Home</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
-                  <li class="active"><a class="page-scroll" page-scroll href="standorte.html">Standorte</a></li>
-                  <li><a class="page-scroll" page-scroll href="partner.html">Partner</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
-                  <li><a href="login.html" class="navbar-brand">Log In</a></li>
-              </ul>
-          </div>
-      </div>
-    </nav>
-</div>
-
-<!-- Navigation -->
-<aside id="menu">
-    <div id="navigation">
-        <div class="bezirk">
-            <div class="col-sm-4 m-t-xs">
-              <h5>Bezirk:</h5>
+                  </button>
+                  <a href="index.html"><img src="images/landing/payucaLogo.png" class="logo" alt="PAYUCA Logo" /></a>
+               </div>
+               <div id="navbar" class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav navbar-right">
+                     <li><a class="page-scroll" href="index.html">Home</a></li>
+                     <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
+                     <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
+                     <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
+                     <li class="active"><a class="page-scroll" page-scroll href="standorte.html">Standorte</a></li>
+                     <li><a class="page-scroll" page-scroll href="partner.html">Partner</a></li>
+                     <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
+                     <li><a href="login.html" class="navbar-brand">Log In</a></li>
+                  </ul>
+               </div>
             </div>
-            <div class="col-sm-8">
-              <select class="form-control" name="bezirk">
-                <option>1010</option>
-                <option>1020</option>
-                <option>1030</option>
-                <option>1040</option>
-              </select>
-            </div>
-        </div>
-
-        <ul class="nav" id="side-menu">
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-            <li class="garage">
-                <div class="row p-xs">
-                  <div class="col-lg-12">
-                    <a href=""><h4>Garage Gasometer</h4></a>
-                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
-                  </div>
-                </div>
-                <div class="row p-xs m-t-n m-b">
-                  <div class="col-lg-12">
-                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
-                  </div>
-                </div>
-            </li>
-
-        </ul>
-    </div>
-</aside>
-
-<!-- Main Wrapper -->
-<div id="wrapper">
-  <div class="content">
-    <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD85LJMNFKoyifgapcHDGxxl6SF2aj9R70">
-      </script>
-    </head>
-
-    <body onload="initMap()" class="rest">
-      <div class="content hidden-sm-down">
-        <div class="mapcontainer">
-          <div>
-            <div id="map-canvas"></div>
-          </div>
-        </div>
+         </nav>
       </div>
-    </body>
-
-    </html>
-  </div>
+      <!-- Navigation -->
+      <aside id="menu">
+         <div id="navigation">
+            <div class="bezirk">
+               <div class="col-sm-4 m-t-xs">
+                  <h5>Bezirk:</h5>
+               </div>
+               <div class="col-sm-8">
+                  <select class="form-control" name="bezirk">
+                     <option>1010</option>
+                     <option>1020</option>
+                     <option>1030</option>
+                     <option>1040</option>
+                  </select>
+               </div>
+            </div>
+            <ul class="nav" id="side-menu">
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+               <li class="garage">
+                  <div class="row p-xs">
+                     <div class="col-lg-12">
+                        <a href="">
+                           <h4>Garage Gasometer</h4>
+                        </a>
+                        <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                     </div>
+                  </div>
+                  <div class="row p-xs m-t-n m-b">
+                     <div class="col-lg-12">
+                        Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                     </div>
+                  </div>
+               </li>
+            </ul>
+         </div>
+      </aside>
+      <!-- Main Wrapper -->
+      <div id="wrapper">
+         <div class="content">
+            <head>
+               <meta name="viewport" content="width=device-width, initial-scale=1">
+               <script async defer
+                  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD85LJMNFKoyifgapcHDGxxl6SF2aj9R70"></script>
+            </head>
+            <body onload="initMap()" class="rest">
+               <div class="content hidden-sm-down">
+                  <div class="mapcontainer">
+                     <div>
+                        <div id="map-canvas"></div>
+                     </div>
+                  </div>
+               </div>
+   </body>
+</html>
 </div>
-
+</div>
 <!-- Vendor scripts -->
 <script src="vendor/jquery/dist/jquery.min.js"></script>
 <script src="vendor/jquery-ui/jquery-ui.min.js"></script>
@@ -222,10 +216,8 @@
 <script src="vendor/iCheck/icheck.min.js"></script>
 <script src="vendor/sparkline/index.js"></script>
 <script src="vendor/toastr/build/toastr.min.js"></script>
-
 <!-- App scripts -->
 <script src="scripts/homer.js"></script>
 <script src="scripts/index.js"></script>
-
 </body>
 </html>
